@@ -4,6 +4,9 @@ HISTORY of collective.pwexpiry
 0.7 (unreleased)
 ----------------
 
+- Ignore Managers from password expiring
+  [frapell]
+
 - Bugfix: If a wrong password was entered that goes over the limit, do not
   add a response header. Only do it when entering correctly
   [frapell]
